# fntsample

./: .clang-format  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  LICENSE  Makefile  Makefile.am  Messages.sh  README.rst  conf.py  config.h.in  configure.ac  fntsample.1.in  fntsample.c  fntsample.rst  genblocks.awk  index.rst  pdf-extract-outline.1.in  pdf-extract-outline.pl  pdfoutline  pdfoutline.1.in  pdfoutline.pl  pdfoutline.rst  read_blocks.c  unicode_blocks.h
.github/workflows/: ci.yml
CMake/: DownloadUnicodeBlocks.cmake  FindAwk.cmake  FindXgettext.cmake  PoFileUtils.cmake
_templates/: layout.html
cmake/: FindIconv.cmake
po/: CMakeLists.txt  Changes  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  fntsample.pot  uk.po
scripts/: CMakeLists.txt  pdf-extract-outline.1.in  pdf-extract-outline.pl  pdfoutline.1.in  pdfoutline.pl
src/: CMakeLists.txt  file_unicode_blocks.cpp  file_unicode_blocks.h  fntsample.1.in  fntsample.c  fntsample.cpp  gen_unicode_blocks.c  gen_unicode_blocks.cpp  loadable_unicode_blocks.cpp  loadable_unicode_blocks.h  read_blocks.c  read_blocks.cpp  static_unicode_blocks.cpp.in  static_unicode_blocks.h  unicode_blocks.cpp  unicode_blocks.h  unicode_range.h  unicode_range_set.h  unicode_utils.h
